--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "prepare": "npm run build",
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "watch": "tsc -w"
   },
   "exports": {
     "./*": "./dist/*.js"
